Add ability to open two programs at one go

--- a/resources/programs.in
+++ b/resources/programs.in
@@ -10,9 +10,12 @@ edytora
 edytor
 notatnika
 notatnika
+notatnik
 graficzny
 sublime
 przeglądarka
 przeglądarkę
 odtwarzacz
 ustawienia
+graficzny
+muzyczny
