--- a/resources/programsDict.in
+++ b/resources/programsDict.in
@@ -10,9 +10,12 @@ edytora	gedit
 edytor	gedit
 notatnika	gedit
 notatnika	gedit
+notatnik	gedit
 graficzny	gimp
 sublime	subl
 przeglądarka	firefox
 przeglądarkę	firefox
 odtwarzacz	vlc
 ustawienia	unity-control-center
+graficzny	gimp
+muzyczny	vlc
