Improvement of ability to open files & lematization for google search

--- a/resources/searchDict.in
+++ b/resources/searchDict.in
@@ -1,14 +1,6 @@
-poszukać
-nieposzukania
-nieposzukaniach
-nieposzukaniami
-nieposzukanie
-nieposzukaniem
-nieposzukaniom
-nieposzukaniu
-nieposzukań
 poszuka
 poszukacie
+poszukać
 poszukaj
 poszukają
 poszukajcie
@@ -55,7 +47,69 @@ poszukano
 poszukań
 poszukasz
 poszukawszy
-wyszukaj
-poszukaj
+wyszuka
+wyszukacie
 wyszukać
+wyszukaj
+wyszukają
+wyszukajcie
+wyszukajcież
+wyszukajmy
+wyszukajmyż
+wyszukajże
+wyszukali
+wyszukaliby
+wyszukalibyście
+wyszukalibyśmy
+wyszukaliście
+wyszukaliśmy
+wyszukał
+wyszukała
+wyszukałaby
+wyszukałabym
+wyszukałabyś
+wyszukałam
+wyszukałaś
+wyszukałby
+wyszukałbym
+wyszukałbyś
+wyszukałem
+wyszukałeś
+wyszukało
+wyszukałoby
+wyszukały
+wyszukałyby
+wyszukałybyście
+wyszukałybyśmy
+wyszukałyście
+wyszukałyśmy
+wyszukam
+wyszukamy
+wyszukana
+wyszukaną
+wyszukane
+wyszukanego
+wyszukanej
+wyszukanemu
+wyszukani
+wyszukania
+wyszukaniach
+wyszukaniami
+wyszukanie
+wyszukaniej
+wyszukaniem
+wyszukaniom
+wyszukaniu
+wyszukano
+wyszukaność
+wyszukany
+wyszukanych
+wyszukań
+wyszukasz
+wyszukawszy
 znajdź
+znajdźcie
+znajdźcież
+znajdźmy
+znajdźmyż
+znajdźże
