--- a/resources/programs.in
+++ b/resources/programs.in
@@ -1,21 +1,853 @@
-firefox
-kalkulator
-libreoffice
-office
-gedit
-vlc
+accountsservice
+acl
+acpid
+adduser
+aisleriot
+anacron
+apg
+apparmor
+apport
+appstream
+apt
+aptdaemon
+apturl
+aspell
+atom
+bamfdaemon
+baobab
+bash
+bc
+binutils
+bittorrent
+bluez
+bogofilter
+brltty
+bsdmainutils
+bsdutils
+bzip2
+cabextract
+cheese
+chkrootkit
+cmake
+colord
+compiz
+coreutils
+cpio
+cpp
+crda
+cron
+cups
+curl
+dash
+dbus
+dc
+debconf
+debhelper
+debianutils
+dhex
+dia
+diffstat
+diffutils
+dirmngr
 display
+dkms
+dmidecode
+dnsutils
+dosfstools
+dpkg
+e2fslibs
+e2fsprogs
 edytor
 edytora
-edytor
-notatnika
-notatnika
-notatnik
+efibootmgr
+eject
+enchant
+eog
+ethtool
+evince
+evolution
+fakeroot
+ffmpeg
+file
+filezilla
+findutils
+finger
+firefox
+fontconfig
+freepats
+ftp
+fuse
+fwupd
+fwupdate
+gawk
+gcc
+gconf2
+gcr
+gdb
+gdbserver
+gdisk
+gedit
+genisoimage
+geoclue
+gettext
+ghostscript
+gimp
+git
+gnupg
+gnupg2
+gpgv
 graficzny
-sublime
+grep
+gsfonts
+gucharmap
+guitarix
+gvfs
+gzip
+hdparm
+hostname
+hplip
+hud
+hwdata
+ibus
+icoutils
+ifupdown
+imagemagick
+info
+init
+initscripts
+inkscape
+inputattach
+insserv
+ippusbxd
+iproute2
+iptables
+irqbalance
+iw
+jackd
+jackd2
+jayatana
+kactivities
+kaffeine
+kalkulator
+katepart
+kbd
+kdoctools
+kmod
+kpackagelauncherqml
+kpackagetool5
+lame
+less
+lib32gcc1
+libaa1
+libaacs0
+libaccountsservice0
+libacl1
+libaio1
+libamd2.4.1
+libao4
+libapparmor1
+libappindicator1
+libappstream3
+libarchive13
+libasan2
+libasound2
+libaspell15
+libasprintf0v5
+libass5
+libassuan0
+libasyncns0
+libatasmart4
+libatm1
+libatomic1
+libattica0.4
+libattr1
+libaudio2
+libaudit1
+libavbin0
+libavcodec53
+libavformat53
+libavutil51
+libbabeltrace1
+libbasicusageenvironment1
+libbdplus0
+libblas3
+libblkid1
+libbluetooth3
+libbluray1
+libbrlapi0.6
+libbs2b0
+libbsd0
+libc6
+libcaca0
+libcairo2
+libcamd2.4.1
+libcanberra0
+libcap2
+libccolamd2.9.1
+libcddb2
+libcdio13
+libcdparanoia0
+libcdt5
+libcgmanager0
+libcgraph6
+libcheese8
+libcholmod3.0.6
+libchromaprint0
+libcilkrts5
+libcmph0
+libcogl20
+libcolamd2.9.1
+libcolord2
+libcolorhug2
+libcolumbus1v5
+libcomerr2
+libcompizconfig0
+libcrack2
+libcroco3
+libcryptsetup4
+libcryptui0a
+libcrystalhd3
+libcups2
+libcupscgi1
+libcupsfilters1
+libcupsimage2
+libcupsmime1
+libcupsppdc1
+libcurl3
+libdaemon0
+libdatrie1
+libdb5.1
+libdb5.3
+libdca0
+libdconf1
+libdebconfclient0
+libdecoration0
+libdevmapper1.02.1
+libdfu1
+libdjvulibre21
+libdlrestrictions1
+libdns162
+libdotconf0
+libdrm2
+libdv4
+libdvbpsi10
+libdvdnav4
+libdvdread4
+libebml4v5
+libedit2
+libefivar0
+libelf1
+libenchant1c2a
+libeot0
+libepoxy0
+libespeak1
+libestr0
+libevdev2
+libevolution
+libexempi3
+libexif12
+libexpat1
+libfaad2
+libfakeroot
+libfam0
+libfdisk1
+libffado2
+libffi6
+libfilezilla0
+libflac8
+libflite1
+libfluidsynth1
+libfontconfig1
+libfontembed1
+libfontenc1
+libframe6
+libfreetype6
+libfribidi0
+libfuse2
+libfwup0
+libfwupd1
+libgail18
+libgbm1
+libgc1c2
+libgcc1
+libgcrypt20
+libgd3
+libgdata22
+libgdbm3
+libgeis1
+libgeoclue0
+libgeoip1
+libgeonames0
+libgettextpo0
+libgfortran3
+libgif7
+libgimp2.0
+libglew1.13
+libglewmx1.13
+libgme0
+libgmp10
+libgmpxx4ldbl
+libgnomekbd8
+libgnutls30
+libgomp1
+libgpgme11
+libgpm2
+libgpod4
+libgrail6
+libgroupsock8
+libgs9
+libgsl2
+libgsm1
+libgssglue1
+libgtkglext1
+libgtkspell0
+libgusb2
+libgutenprint2
+libgvc6
+libgvpr2
+libgxps2
+libharfbuzz0b
+libhogweed4
+libhpmud0
+libhud2
+libhwloc5
+libhyphen0
+libibverbs1
+libical1a
+libice6
+libicu55
+libidn11
+libilmbase12
+libimobiledevice6
+libindicator7
+libinput10
+libisc160
+libisccc140
+libisccfg140
+libisl15
+libitm1
+libiw30
+libjansson4
+libjasper1
+libjbig0
+libjbig2dec0
+libjpeg62
+libjpeg8
+libjsoncpp1
+libk5crypto3
+libkactivities6
+libkate1
+libkatepartinterfaces4
+libkcmutils4
+libkde3support4
+libkdeclarative5
+libkdecore5
+libkdesu5
+libkdeui5
+libkdewebkit5
+libkdnssd4
+libkemoticons4
+libkeyutils1
+libkf5activities5
+libkf5archive5
+libkf5attica5
+libkf5auth5
+libkf5calendarevents5
+libkf5codecs5
+libkf5completion5
+libkf5configcore5
+libkf5configgui5
+libkf5configwidgets5
+libkf5coreaddons5
+libkf5crash5
+libkf5dbusaddons5
+libkf5declarative5
+libkf5globalaccel5
+libkf5globalaccelprivate5
+libkf5guiaddons5
+libkf5i18n5
+libkf5iconthemes5
+libkf5idletime5
+libkf5itemviews5
+libkf5jobwidgets5
+libkf5kiocore5
+libkf5kiowidgets5
+libkf5notifications5
+libkf5package5
+libkf5plasma5
+libkf5plasmaquick5
+libkf5quickaddons5
+libkf5service5
+libkf5sonnetcore5
+libkf5sonnetui5
+libkf5style5
+libkf5textwidgets5
+libkf5waylandclient5
+libkf5widgetsaddons5
+libkf5windowsystem5
+libkf5xmlgui5
+libkfile4
+libkhtml5
+libkio5
+libkjsapi4
+libkjsembed4
+libklibc
+libkmediaplayer4
+libkmod2
+libknotifyconfig4
+libkntlm4
+libkparts4
+libkpathsea6
+libkpty4
+libkrb5support0
+libkrosscore4
+libksba8
+libktexteditor4
+libkxmlrpcclient4
+liblangtag1
+liblapack3
+libldb1
+liblinear3
+liblircclient0
+liblivemedia50
+libllvm3.8
+libllvm3.9
+liblo7
+liblog4cpp5v5
+liblouis9
+liblouisutdml6
+liblrdf0
+liblsan0
+libltdl7
+liblwres141
+liblzma5
+libmad0
+libmagic1
+libmatroska6v5
+libmhash2
+libmimic0
+libminiupnpc10
+libmirclient9
+libmircommon5
+libmirprotobuf3
+libmms0
+libmng2
+libmnl0
+libmodplug1
+libmount1
+libmp3lame0
+libmpc3
+libmpcdec6
+libmpdec2
+libmpfr4
+libmpx0
+libmspack0
+libmtdev1
+libmtp9
+libmysqlclient20
+libnatpmp1
+libncurses5
+libncursesw5
+libndp0
+libnetpbm10
+libnettle6
+libnewt0.52
+libnfnetlink0
+libnih1
+libnm0
+libnma0
+libnotify4
+libnpth0
+libnspr4
+libnss3
+libntrack0
+libnuma1
+liboauth0
+libodbc1
+libofa0
+libogg0
+libopenal1
+libopenexr22
+libopenjpeg5
+libopenmpi1.10
+libopus0
+liborbit2
+libosmesa6
+liboxideqtcore0
+liboxideqtquick0
+libpam0g
+libpaper1
+libparted2
+libpathplan4
+libpcap0.8
+libpci3
+libpciaccess0
+libpcre3
+libpcrecpp0v5
+libpcsclite1
+libperl5.22
+libphonon4
+libpipeline1
+libplasma3
+libplist3
+libplymouth4
+libpoppler58
+libpopt0
+libportaudio2
+libpotrace0
+libprocps4
+libprotobuf9v5
+libproxy1v5
+libpst4
+libptexenc1
+libpugixml1v5
+libpulse0
+libpulsedsp
+libpwquality1
+libpython2.7
+libpython3.5
+libqca2
+libqpdf17
+libqqwing2v5
+libqt5core5a
+libqt5dbus5
+libqt5feedback5
+libqt5gui5
+libqt5multimedia5
+libqt5network5
+libqt5opengl5
+libqt5organizer5
+libqt5positioning5
+libqt5printsupport5
+libqt5qml5
+libqt5quick5
+libqt5quicktest5
+libqt5quickwidgets5
+libqt5script5
+libqt5sql5
+libqt5svg5
+libqt5test5
+libqt5waylandclient5
+libqt5webkit5
+libqt5widgets5
+libqt5x11extras5
+libqt5xml5
+libqtcore4
+libqtdbus4
+libqtgui4
+libqtwebkit4
+libquadmath0
+libquvi7
+libraptor1
+librasqal3
+libraw15
+librdf0
+libreadline6
+libreoffice
+librtmp1
+libruby2.3
+libsamplerate0
+libsane
+libsbc1
+libsdl1.2debian
+libseccomp2
+libselinux1
+libsemanage1
+libsensors4
+libsepol1
+libshine3
+libshout3
+libsidplay1v5
+libsidplay2v5
+libsigsegv2
+libslang2
+libsm6
+libsmartcols1
+libsmbclient
+libsnappy1v5
+libsndfile1
+libsnmp30
+libsodium18
+libsolid4
+libsonic0
+libsoundtouch1
+libsoxr0
+libspandsp2
+libspectre1
+libspeechd2
+libspeex1
+libspeexdsp1
+libsrtp0
+libss2
+libssl1.0.0
+libstreamanalyzer0v5
+libstreams0v5
+libsuitesparseconfig4.4.6
+libswscale2
+libsynctex1
+libsystemd0
+libtag1v5
+libtalloc2
+libtbb2
+libtcl8.6
+libtdb1
+libtevent0
+libtexlua52
+libtexluajit2
+libthai0
+libtheora0
+libthreadweaver4
+libtiff5
+libtimezonemap1
+libtinfo5
+libtk8.6
+libtool
+libtotem0
+libtsan0
+libtwolame0
+libubsan0
+libubuntugestures5
+libubuntutoolkit5
+libuchardet0
+libudev1
+libumfpack5.7.1
+libunistring0
+libunity9
+libunwind8
+libupnp6
+libusageenvironment3
+libusbmuxd4
+libutempter0
+libuuid1
+libv4lconvert0
+libva1
+libvcdinfo0
+libvdpau1
+libvlc5
+libvlccore8
+libvncclient1
+libvoikko1
+libvorbis0a
+libvorbisenc2
+libvorbisfile3
+libvpx1
+libvpx3
+libwacom2
+libwavpack1
+libwbclient0
+libwebp5
+libwebpmux1
+libwhoopsie0
+libwildmidi1
+libwrap0
+libxapian22v5
+libxatracker2
+libxau6
+libxaw7
+libxcb1
+libxcomp3
+libxcomposite1
+libxcursor1
+libxdamage1
+libxdmcp6
+libxdot4
+libxext6
+libxfixes3
+libxfont1
+libxft2
+libxi6
+libxine2
+libxinerama1
+libxkbcommon0
+libxkbfile1
+libxklavier16
+libxml2
+libxmu6
+libxmuu1
+libxnvctrl0
+libxpm4
+libxrandr2
+libxrender1
+libxres1
+libxshmfence1
+libxslt1.1
+libxss1
+libxt6
+libxtables11
+libxtst6
+libxv1
+libxvidcore4
+libxvmc1
+libxxf86dga1
+libxxf86vm1
+libyajl2
+libyelp0
+libytnef0
+libzbar0
+libzmq5
+libzvbi0
+lightdm
+lintian
+lmodern
+locales
+login
+logrotate
+lshw
+lsof
+ltrace
+make
+makedev
+manpages
+mawk
+memtest86+
+meterbridge
+mlocate
+modemmanager
+mokutil
+mount
+mountall
+mousetweaks
+mscompress
+mtools
+muzyczny
+nano
+nautilus
+ndiff
+netbase
+netpbm
+nmap
+nodejs
+notatnik
+notatnika
+nxproxy
+odtwarzacz
+office
+onboard
+openssl
+openvpn
+p7zip
+parted
+passwd
+patch
+patchutils
+pavucontrol
+pciutils
+pcmciautils
+perl
+phonon
+playonlinux
+plymouth
+ppp
+pppconfig
+pppoeconf
+procps
+prosper
 przeglądarka
 przeglądarkę
-odtwarzacz
+ps2eps
+psmisc
+pulseaudio
+pycharm
+pyotherside
+python
+python2.7
+python3
+python3.5
+qdbus
+qjackctl
+qmlscene
+qnapi
+qpdf
+qtchooser
+qtwayland5
+rake
+rdesktop
+remmina
+rename
+resolvconf
+rfkill
+rhythmbox
+rsync
+rsyslog
+rtkit
+ruby
+ruby2.3
+sbsigntool
+seahorse
+sed
+sessioninstaller
+shim
+shotwell
+signond
+simplescreenrecorder
+skype
+sl
+snapd
+steam
+strace
+sublime
+sudo
+syslinux
+systemd
+t1utils
+tar
+tcl
+tcl8.6
+tcpd
+tcpdump
+teamviewer
+tedia2sql
+telnet
+texstudio
+thermald
+thunderbird
+time
+tk
+tk8.6
+toshset
+totem
+transfig
+tzdata
+ucf
+uchardet
+udev
+udisks2
+ufw
+unity
+unrar
+unzip
+upower
+upstart
+ure
+ureadahead
+usbmuxd
+usbutils
 ustawienia
-graficzny
-muzyczny
+vbetool
+vino
+vlc
+wamerican
+wbritish
+wdiff
+wget
+whiptail
+whoopsie
+wine
+wine1.6
+winetricks
+wpasupplicant
+wpolish
+x2goclient
+xauth
+xbitmaps
+xbrlapi
+xclip
+xdiagnose
+xinit
+xinput
+xorg
+xterm
+yelp
+zenity
+zip
+zlib1g
